Increase space between buttons. Fix item titles overflowing card.

--- a/frontend/src/app/components/widgets/item-card/item-card.component.scss
+++ b/frontend/src/app/components/widgets/item-card/item-card.component.scss
@@ -16,6 +16,12 @@
     0 1px 5px 0 rgb(0 0 0 / 12%);
 }
 
+.item-card-left {
+  @apply flex-grow;
+
+  max-width: calc(100% - 24px);
+}
+
 .item-card-info {
   @apply flex items-center mr-2.5;
 
